--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "nativescript": {
     "id": "org.nativescript.rehearsalroomsapp",
     "tns-android": {
-      "version": "2.4.1"
+      "version": "2.5.0"
     }
   },
   "dependencies": {
@@ -19,12 +19,11 @@
     "@angular/platform-browser-dynamic": "2.3.1",
     "@angular/router": "3.3.1",
     "nativescript-angular": "1.3.0",
-    "nativescript-google-maps-sdk": "^1.4.3",
     "nativescript-phone": "^1.2.4",
     "nativescript-theme-core": "^0.2.1",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-rc.4",
-    "tns-core-modules": "2.4.4"
+    "tns-core-modules": "^2.5.0"
   },
   "devDependencies": {
     "babel-traverse": "6.22.1",
