--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "2.3.1",
     "@angular/router": "3.3.1",
     "nativescript-angular": "1.3.0",
+    "nativescript-mapbox": "^2.5.1",
     "nativescript-phone": "^1.2.4",
     "nativescript-theme-core": "^0.2.1",
     "reflect-metadata": "~0.1.8",
