--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "nativescript-theme-core": "^0.2.1",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-rc.4",
-    "tns-core-modules": "^2.5.0"
+    "tns-core-modules": "2.5.0"
   },
   "devDependencies": {
     "babel-traverse": "6.22.1",
