--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "БГ Репетиционни",
   "description": "Каталог на всички репетиционни стаи в София.",
   "license": "SEE LICENSE IN <your-license-filename>",
   "readme": "https://raw.githubusercontent.com/etabakov/rehearsal-rooms-app/master/README.md",
@@ -22,6 +21,7 @@
     "nativescript-angular": "1.3.0",
     "nativescript-mapbox": "^2.5.1",
     "nativescript-phone": "^1.2.4",
+    "nativescript-telerik-analytics": "^1.0.6",
     "nativescript-theme-core": "^0.2.1",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.0-rc.4",
