--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser-dynamic": "2.3.1",
     "@angular/router": "3.3.1",
     "nativescript-angular": "1.3.0",
-    "nativescript-mapbox": "^2.5.1",
+    "nativescript-google-maps-sdk": "^1.4.3",
     "nativescript-phone": "^1.2.4",
     "nativescript-telerik-analytics": "^1.0.6",
     "nativescript-theme-core": "^0.2.1",
